fixed gap

--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -97,6 +97,7 @@ header
   display: grid
   grid-template-columns: repeat(2, 1fr)
   column-gap: 20px
+  grid-column-gap: 20px
   grid-row-gap: 30px
   a
     height: 100%
